--- a/conf/log-app.conf
+++ b/conf/log-app.conf
@@ -21,7 +21,7 @@ args=(sys.stderr,)
 class=FileHandler
 level=DEBUG
 formatter=formatter
-args=('/path/to/log/app.log','a','utf8')
+args=('/Users/lianghong/Workspace/Python/flask-adminlte-scaffold/logs/rolling.log','a','utf8')
 
 [formatter_formatter]
 format=%(asctime)s %(name)-12s %(levelname)-8s %(message)s
